# lbee_simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  index.js  web_api.wasm
.github/workflows/: build.yml
scripts/sim/: asm_code.js  bin_code.js  index.js  load.js  load_code.js  run.js  states.js
scripts/wasm/: index.js
styles/: index.css
ui/: index.html
ui/scripts/: index.js
ui/scripts/home/: index.js
ui/scripts/sim/: asm_code.js  bin_code.js  index.js  load.js  load_code.js  run.js  states.js
ui/scripts/wasm/: index.js
ui/styles/: index.css
wasm/: CMakeLists.txt  Makefile  c_api.cpp  c_api.h  global.cpp  global.h  sim_viewer.cpp  sim_viewer.h  web_api.cpp  web_api.js  web_api.wasm
wasm/assembler/: Makefile  code.ys  input.cpp  isa.h  lexer.cpp  lexer.h  lexer.lex  main.cpp  output.cpp  output.h  yas.cpp  yas.h
wasm/simulator/: Makefile  main.cpp  sim_yis.h
wasm/src/: Makefile  api.cpp  api.h  code.yo.golden  input.cpp  input.h  lexer.cpp  lexer.h  lexer.lex  output.cpp  output.h  test_yas.cpp
